# neural-core

./: .gitignore  CMakeLists.txt  Makefile  NNFS_Diploma.cpp  README.md  neural_core.cpp  tests.cpp  train_fashion_mnist.cpp
include/neural_core/: accuracy.hpp  activations.hpp  core_utils.hpp  data.hpp  layers.hpp  losses.hpp  matrix.hpp  model.hpp  neural_core.hpp  optimizers.hpp  rng.hpp  scatter_plot.hpp
src/: accuracy.cpp  activations.cpp  core_utils.cpp  data.cpp  layers.cpp  losses.cpp  matrix.cpp  model.cpp  optimizers.cpp  rng.cpp  scatter_plot.cpp
tests/: test_accuracy.cpp  test_activations.cpp  test_common.hpp  test_core.cpp  test_data_plot.cpp  test_layers.cpp  test_losses.cpp  test_matrix.cpp  test_model.cpp  test_optimizers.cpp
